// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`не покажет скидку если baseCost равен 0 1`] = `
<div
  className="BillingHeader__price"
>
  <span>
    90 ₽
  </span>
</div>
`;

exports[`покажет скидку если baseCost больше cost 1`] = `
<span
  className="BillingHeader__baseCost"
>
  101 ₽
</span>
`;

exports[`правильно рисует компонент для десктопа 1`] = `
<div
  className="BillingHeader BillingHeader_platform_desktop"
>
  <div
    className="BillingHeader__title"
  >
    Турбо-продажа
  </div>
  <div
    className="BillingHeader__price"
  >
    <span>
      90 ₽
    </span>
  </div>
</div>
`;

exports[`правильно рисует компонент для мобилки 1`] = `
<div
  className="BillingHeader BillingHeader_platform_mobile"
>
  <div
    className="BillingHeader__title"
  >
    Турбо-продажа
  </div>
  <div
    className="BillingHeader__price"
  >
    <span>
      90 ₽
    </span>
  </div>
</div>
`;

exports[`правильно рисует компонент если оплачивается 1 сервис 1`] = `
<div
  className="BillingHeader BillingHeader_platform_desktop"
>
  <div
    className="BillingHeader__title"
  >
    Турбо-продажа
  </div>
  <div
    className="BillingHeader__price"
  >
    <span>
      90 ₽
    </span>
  </div>
</div>
`;
